--- a/05-annotations.yaml
+++ b/05-annotations.yaml
@@ -3,7 +3,7 @@ kind: Pod
 metadata:
   name: annotations-demo
   project: robomart
-  environment: robomart-dev
+  environment: dev
   annotations: 
     github-url: "https://github.com/azharmd-dev"
     dockerhub-url: "https://hub.docker.com/repositories/azharmd"
