--- a/06-errors.yaml
+++ b/06-errors.yaml
@@ -7,4 +7,4 @@ spec:
     # - name: nginx
     #   image: nginx:1.29.3-alpinegggggg #Back-off pulling image error
     - name: almalinux
-      image: almalinux:9
+      image: almalinux:9 #CrashLoopBackOff
