--- a/volumes/07-efs-sc.yaml
+++ b/volumes/07-efs-sc.yaml
@@ -1,10 +1,10 @@
 kind: StorageClass
 apiVersion: storage.k8s.io/v1
 metadata:
-  name: roboshop-efs
+  name: robomart-efs
 provisioner: efs.csi.aws.com
 parameters:
   provisioningMode: efs-ap
   fileSystemId: fs-095391b54d2e887eb
   directoryPerms: "700"
-  basePath: "/roboshop" # optional
+  basePath: "/robomart" # optional
